# stm32-base

./: .atom-build.yml  .clang_complete  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.c
inc/: FreeRTOSConfig.h
src/: newlib.c
tools/: build.sh  flash.jlink
